my-test/testsuite_scan/ir/SingleSource/Benchmarks/Misc/fbench.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Benchmarks/Misc/fbench.c:651:8: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
  651 | static trace_line(line, ray_h)
      | ~~~~~~ ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Benchmarks/Misc/fbench.c:651:8: warning: a function definition without a prototype is deprecated in all versions of C and is not supported in C23 [-Wdeprecated-non-prototype]
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Benchmarks/Misc/fbench.c:679:1: warning: a function definition without a prototype is deprecated in all versions of C and is not supported in C23 [-Wdeprecated-non-prototype]
  679 | main(argc, argv)
      | ^
2 warnings and 1 error generated.
